webkit pc scrollbar

--- a/src/style.css
+++ b/src/style.css
@@ -249,8 +249,8 @@ button {
     display: flex;
     align-items: center;
     user-select: none;
-    visibility: hidden;
     padding: 0em;
+    visibility: hidden;
     content-visibility: hidden;
 }
 
@@ -644,6 +644,31 @@ max-aspect-ratio: 9/16) {
     }
     .talent-dropdown-entries {
         max-height: 15em;
+        overflow-y: hidden;
+        margin-right: 2px;
+    }
+    .talent-dropdown-entries:hover {
+        overflow-y: auto;
+    }
+    @media screen and (-webkit-min-device-pixel-ratio:0) {
+        .talent-dropdown-entries {
+            background-color: rgba(0, 0, 0, 0);
+            -webkit-background-clip: text;
+            transition: background-color .5s;
+        }
+        .talent-dropdown-entries:hover {
+            background-color: rgba(0, 0, 0, 0.40);
+        }
+    }
+    .talent-dropdown-entries::-webkit-scrollbar {
+        width: 5px;
+    }
+    .talent-dropdown-entries::-webkit-scrollbar-track {
+        opacity: 0;
+    }
+    .talent-dropdown-entries::-webkit-scrollbar-thumb {
+        border-radius: 5px;
+        background-color: inherit;
     }
     .talent-dropdown-entries__entry.dropdown- {
         padding: 0.2em;
