--- a/src/style.css
+++ b/src/style.css
@@ -72,9 +72,9 @@ button {
 	justify-content: space-between;
 	align-items: center;
 	font-size: 1rem;
-	padding-left: 15px;
-	padding-right: 0.6em; /* beware info-button rotation overflow */
+	padding-left: 10px;
 	padding-top: 0.2em;
+	overflow: hidden;
 }
 
 .header__title {
@@ -653,7 +653,8 @@ button {
 	}
 
 	.header {
-		padding-right: 0.8em; /* beware info-button overflow */
+		padding-left: 15px;
+		padding-right: 5px;
 		min-width: var(--min-width);
 	}
 
